--- a/static/style.css
+++ b/static/style.css
@@ -2,3 +2,38 @@ body{
     margin: 0;
     padding: 0;
 }
+.home{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.answer{
+    height: 94%;
+    width: 95%;
+    overflow-y: scroll;
+    background-color: aliceblue;
+    border-radius: 15px 15px 0 0;
+}
+.input-box{
+    height: 6%;
+    display: flex;
+    width: 95%;
+    justify-content: space-between;
+    border: 1px solid #000;
+}
+.input-box>input{
+    /* height: 80%; */
+    width: 90%;
+    border: none;
+}
+.input-box>button{
+    /* height: 80%; */
+}
+@media screen and (min-width: 768px) {
+    .input-box, .answer{
+        width: 60%;
+    }
+}
