fixed bugs in ajax

--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,9 @@ body{
     width: 90%;
     border: none;
 }
+.input-box>input:focus{
+    outline: none;
+}
 .input-box>button{
     /* height: 80%; */
 }
