llm for sql generation added

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 
     <div>
         <form class="home py-3" id="form" method="POST">
-            <div class="answer">
+            <div class="answer px-3">
                 <p id="answer"></p>
             </div>
             <div class="input-box">
