--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,12 @@
     <div>
         <form class="home py-3" id="form" method="POST">
             <div class="answer px-3">
-                <p id="answer"></p>
+                <p class="heading m-0 text-lg-center">DragonSense AI</p>
+                <p class="tagline m-0 text-lg-center">Sense Your Database...</p>
+                <p id="answer" class="mt-3"></p>
             </div>
             <div class="input-box">
-                <input type="text" name="message" id="text"/>
+                <input type="text" name="message" placeholder="Enter your query.." id="text"/>
                 <button id="submit">send</button>
             </div>
         </form>
@@ -23,6 +25,11 @@
                 ev.preventDefault();
                 // alert("hihi")
                 var text = $("#text").val()
+                $("#text").val("")
+                var existingContent = $("#answer").html();
+                var newContent = existingContent  + "<p class='question mb-2'><span class='user'>User: </span>"+ text + "</p>"; // Concatenate
+                console.log(existingContent, newContent)
+                $("#answer").html(newContent);
                 var req = $.ajax({
                     type: 'POST',
                     url: '/',
@@ -31,9 +38,10 @@
                 req.done((data)=>{
                     // $("#answer").text(data.result)
                     var existingContent = $("#answer").html(); // Get existing content
-                    var newContent = existingContent + "<br/>" + data.result; // Concatenate
+                    var newContent = existingContent + "<p class='answer mb-4'><span class='ai'>DragonSense: </span>"+data.result+"</p>"; // Concatenate
+                    console.log(newContent)
                     $("#answer").html(newContent);
-                    $("#text").val("")
+                    
                 })
 
             })
