--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ body{
     width: 95%;
     overflow-y: scroll;
     background-color: #000;
-    border-radius: 15px 15px 0 0;
+    /* border-radius: 15px 15px 0 0; */
     color: #e3e3e3;
 }
 .answer::-webkit-scrollbar {
@@ -45,6 +45,12 @@ body{
     border: none;
     background-color: #1e1f20;
     color: #e3e3e3;
+}
+.user, .ai{
+    background-color: #1e1f20;
+    border-radius: 5px;
+    padding-inline: 10px;
+    padding-block: 6px;
 }
 .input-box>input:focus{
     outline: none;
